[globsl]
quiet = 0

[metadata]
name = secimtools
version = 21.3.4_1
description='Metabolomics tools from the SECIM project',
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/secimTools/SECIMTools
author = McIntyre Lab, Universify of Florida
author_email = om@rc.ufl.edu
license = MIT
keywords = metabolomics secim anova pca random-forest
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.7
setup_requires =
    setuptools
install_requires =
    biopython >= 1.70
    biothings-client >= 0.2
    lxml >= 4
    matplotlib >= 3.2.0
    matplotlib-venn
    numpy >= 1.18
    palettable >= 3.3.0
    pandas >= 1.0
    patsy >= 0.5
    pymc >= 2.3
    rpy2 >= 3.1
    scikit-learn >= 0.22
    scipy >= 1.4
    seaborn >= 0.10
    statsmodels >= 0.11

scripts=
    scripts/anova_fixed.py
    scripts/bland_altman_plot.py
    scripts/blank_feature_filtering_flags.py
    scripts/coefficient_variation_flags.py
    scripts/compare_flags.py
    scripts/compound_identification.py
    scripts/data_normalization_and_rescaling.py
    scripts/distribution_features.py
    scripts/distribution_samples.py
    scripts/hierarchical_clustering_heatmap.py
    scripts/imputation.py
    scripts/kruskal_wallis.py
    scripts/lasso_enet_var_select.py
    scripts/linear_discriminant_analysis.py
    scripts/log_and_glog_transformation.py
    scripts/magnitude_difference_flags.py
    scripts/mahalanobis_distance.py
    scripts/merge_flags.py
    scripts/modify_design_file.py
    scripts/modulated_modularity_clustering.py
    scripts/multiple_testing_adjustment.py
    scripts/mzrt_match.py
    scripts/partial_least_squares.py
    scripts/principal_component_analysis.py
    scripts/random_forest.py
    scripts/remove_selected_features_samples.py
    scripts/remove_user_specified_row_col.py
    scripts/retention_time_flags.py
    scripts/run_order_regression.py
    scripts/scatter_plot_2D.py
    scripts/scatter_plot_3D.py
    scripts/standardized_euclidean_distance.py
    scripts/subset_data.py
    scripts/summarize_flags.py
    scripts/svm_classifier.py
    scripts/threshold_based_flags.py
    scripts/ttest_perm.py
    scripts/ttest.py
    scripts/ttest_single_group.py

[options.package_data]
secimtools = data/*.R

[aliases]
clean_egg_info = egg_info -Db ""
release = clean_egg_info sdist bdist_wheel
source = register sdist binary
binary = bdist_egg upload --show-response

[upload]
repository = pypitest

[sdist]
formats = gztar

[bdist_wheel]
universal=0

[flake8]
max-line-length = 99
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
